# DocForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  cli.py  config.py  main.py  pyproject.toml
backend/api/: auto_resolution.py  data_preview.py  data_sources.py  editor.py  errors.py  generation.py  generation_history.py  generation_stream.py  llm_config.py  llm_extraction.py  plugins.py  project_export.py  projects.py  router.py  schemas.py  templates.py  validation.py
backend/core/: auto_resolver.py  conditional.py  data_loader.py  docx_to_editor.py  editor_models.py  editor_to_docx.py  engine.py  error_catalog.py  llm_client.py  llm_context.py  models.py  plugin_loader.py  template_parser.py  validators.py
backend/db/: database.py  models.py
backend/extractors/: base.py  csv_extractor.py  docx_extractor.py  excel_extractor.py  json_extractor.py  llm_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  yaml_extractor.py
backend/renderers/: base.py  llm_renderer.py  placeholder_renderer.py  table_renderer.py  text_renderer.py
backend/tests/: conftest.py  test_api_editor.py  test_api_generation.py  test_api_llm_config.py  test_api_phase2.py  test_api_projects.py  test_api_templates.py  test_auto_resolver.py  test_cli.py  test_conditional.py  test_data_loader.py  test_db_models.py  test_docx_roundtrip.py  test_docx_to_editor.py  test_editor_to_docx.py  test_engine.py  test_extractors.py  test_extractors_phase2.py  test_generation_stream.py  test_llm_client.py  test_llm_context.py  test_llm_extractor.py  test_llm_renderer.py  test_plugin_loader.py  test_red_text.py  test_renderers.py  test_template_parser.py  test_text_renderer.py  test_transforms.py  test_validators.py
backend/tests/fixtures/: create_fixtures.py
backend/tests/fixtures/data/: config.json  config.yaml  metrics.xlsx  project_status.csv  sample.txt  slides.pptx  source_doc.docx
backend/tests/fixtures/templates/: conditional_template.docx  editor_test_template.docx  mixed_markers.docx  simple_placeholder.docx  simple_table.docx  table_with_sample_data.docx
backend/transforms/: base.py  computed.py  filter.py  format.py  pipeline.py  rename.py  sort.py
backend/utils/: docx_helpers.py  formatting.py  red_text.py
examples/plugins/docforge-currency-transform/: README.md  pyproject.toml
examples/plugins/docforge-currency-transform/docforge_currency_transform/: transform.py
examples/plugins/docforge-currency-transform/tests/: test_transform.py
examples/plugins/docforge-markdown-renderer/: README.md  pyproject.toml
examples/plugins/docforge-markdown-renderer/docforge_markdown_renderer/: renderer.py
examples/plugins/docforge-xml-extractor/: README.md  pyproject.toml
(+107 files in other folders)
