[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docforge-markdown-renderer"
version = "0.1.0"
description = "DocForge plugin: renders markdown-prefixed LLM prompts with bold/italic formatting."
requires-python = ">=3.12"
dependencies = [
    "docforge",
]

[project.entry-points."docforge.renderers"]
markdown = "docforge_markdown_renderer.renderer:MarkdownRenderer"
